# auto-trade-bot

./: .env.example  .gitignore  01_CLAUDE_KICKOFF_PROMPT.md  02_APIS_MASTER_SPEC.md  03_SESSION_CONTINUITY_AND_EXECUTION_PROTOCOL.md  04_APIS_BUILD_RUNBOOK.md  05_INITIAL_REPO_STRUCTURE.md  06_DATABASE_AND_SCHEMA_SPEC.md  07_API_AND_SERVICE_BOUNDARIES_SPEC.md  AI_STOCK_PRIORITY_ANALYSIS.md  APIS Daily Operations Guide.docx  APIS_DEEP_DIVE_REVIEW_2026-04-16.md  APIS_Data_Dictionary.docx  APIS_EXECUTION_PLAN_2026-04-16.md  APIS_IMPLEMENTATION_PLAN_2026-04-14.md  APIS_INDEPENDENT_REVIEW_2026-04-14.md  hb_check.py  restart_apis_stack.bat  restart_worker_for_universe_expansion.bat
apis/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_catchup.py  start_apis.bat  watchdog.bat
apis/apps/: __init__.py
apis/apps/api/: __init__.py  deps.py  main.py  state.py
apis/apps/dashboard/: __init__.py  router.py
apis/apps/worker/: __init__.py  main.py
apis/broker_adapters/: __init__.py
apis/broker_adapters/alpaca/: __init__.py  adapter.py
apis/broker_adapters/base/: __init__.py  adapter.py  exceptions.py  models.py
apis/broker_adapters/ibkr/: __init__.py  adapter.py
apis/broker_adapters/paper/: __init__.py  adapter.py
apis/broker_adapters/schwab/: __init__.py  adapter.py
apis/config/: __init__.py  logging_config.py  secrets.py  settings.py  universe.py
apis/docs/runbooks/: db_backup_runbook.md  live_trading_prerequisites.md  mode_transition_runbook.md  monday_baseline_cycle_watch.md
apis/infra/db/: __init__.py  env.py  seed_securities.py  session.py
apis/infra/docker/: Dockerfile  docker-compose.yml  entrypoint-api.sh  init-db.sql  rebuild.bat
apis/infra/k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secret.yaml  worker-deployment.yaml
apis/infra/monitoring/: grafana_dashboard.json
apis/k8s/: api.yaml  configmap.yaml  postgres.yaml  redis.yaml  worker.yaml
apis/models/: __init__.py
apis/scripts/: flip_kill_switch_off.py  monday_cycle_watch.py  run_backtest_sweep.py
apis/services/: __init__.py
apis/services/action_orchestrator/: __init__.py  invariants.py
apis/services/alerting/: __init__.py  models.py  service.py
apis/services/alternative_data/: __init__.py  adapters.py  models.py  service.py
apis/services/backtest/: __init__.py  comparison.py  config.py  engine.py  models.py
apis/services/broker_adapter/: __init__.py  health.py
apis/services/continuity/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/data_ingestion/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/evaluation_engine/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/execution_engine/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/factor_alerts/: service.py
apis/services/feature_store/: __init__.py  config.py  enrichment.py  models.py  pipeline.py  schemas.py  service.py  utils.py
apis/services/fill_quality/: __init__.py  models.py  service.py
apis/services/live_mode_gate/: __init__.py  models.py  service.py
apis/services/macro_policy_engine/: __init__.py  config.py  models.py  schemas.py  seed.py  service.py  utils.py
apis/services/market_data/: __init__.py  config.py  fundamentals.py  models.py  schemas.py  service.py  utils.py
apis/services/news_intelligence/: __init__.py  config.py  models.py  schemas.py  seed.py  service.py  utils.py
apis/services/portfolio_engine/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/ranking_engine/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/readiness/: __init__.py  models.py  service.py
apis/services/rebalancing_engine/: __init__.py  allocator.py
apis/services/reporting/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/risk_engine/: __init__.py  config.py  correlation.py  drawdown_recovery.py  earnings_calendar.py  factor_exposure.py  family_params.py  liquidity.py  models.py  rebalancing.py  schemas.py  sector_exposure.py  service.py  stress_test.py  thematic_exposure.py  utils.py  var_service.py
apis/services/rumor_scoring/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/self_improvement/: __init__.py  config.py  execution.py  models.py  outcome_ledger.py  schemas.py  service.py  utils.py
apis/services/shadow_portfolio/: __init__.py  service.py
apis/services/signal_engine/: __init__.py  config.py  models.py  regime_detection.py  schemas.py  service.py  signal_quality.py  utils.py  weight_optimizer.py
apis/services/strategy_bandit/: __init__.py  service.py
apis/services/theme_engine/: __init__.py  config.py  models.py  schemas.py  service.py  utils.py
apis/services/universe_management/: __init__.py  pointintime_source.py  service.py
apis/state/: ACTIVE_CONTEXT.md  CHANGELOG.md  DECISION_LOG.md  HEALTH_LOG.md  NEXT_STEPS.md  SESSION_HANDOFF_LOG.md  TECH_DEBT_UNIT_TESTS_2026-04-19.md
apis/strategies/: __init__.py
apis/strategies/ai_theme/: __init__.py  config.py
apis/strategies/event_driven/: config.py  strategy.py
apis/strategies/long_term/: __init__.py  config.py
apis/strategies/policy_trade/: config.py  strategy.py
apis/strategies/swing/: config.py  strategy.py
apis/strategies/theme_rotation/: __init__.py  config.py
apis/tests/: conftest.py
apis/tests/e2e/: __init__.py  test_alpaca_paper_e2e.py  test_ibkr_paper_e2e.py  test_schwab_paper_e2e.py
apis/tests/fixtures/: __init__.py
apis/tests/integration/: __init__.py  test_research_pipeline_integration.py
apis/tests/simulation/: __init__.py  test_paper_cycle_simulation.py
apis/tests/unit/: test_api_routes.py  test_config.py  test_cors.py  test_dashboard.py  test_data_ingestion.py  test_deep_dive_step1_constants.py  test_deep_dive_step2_action_conflicts.py  test_deep_dive_step2_broker_health.py  (+76 more)
(+201 files in other folders)
