[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "apis"
version = "0.1.0"
description = "Autonomous Portfolio Intelligence System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Config and validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.19",
    # Cache / queue
    "redis>=5.0.4",
    # Logging
    "structlog>=24.2.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # HTTP client
    "httpx>=0.27.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Broker
    "alpaca-py>=0.24.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-pytz>=2024.1.0",
    "types-redis>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "broker_adapters*", "strategies*", "models*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    # ── Annotations (mypy handles type completeness) ───────────────────────────
    "ANN001",  # missing type annotation for function argument
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN201",  # missing return type for public function
    "ANN202",  # missing return type for private function
    "ANN401",  # Any type disallowed — used intentionally in generic helpers
    # ── Security — intentional patterns ───────────────────────────────────────
    "S101",    # use of assert — allowed in tests
    "S104",    # hardcoded bind-all interfaces — intentional for containerised API
    "S110",    # try-except-pass — used deliberately in optional integrations
    # ── Style / formatting ─────────────────────────────────────────────────────
    "E501",    # line too long — black/formatter handles this; 100-char target
    "E402",    # module import not at top — required by some FastAPI lazy-import patterns
    "E702",    # multiple statements on one line (semicolons)
    "E731",    # lambda assignment — clearer than def for simple one-liners
    "E741",    # ambiguous variable names (l, I, O) — used in math / loop contexts
    # ── Bugs / quality — accepted trade-offs ──────────────────────────────────
    "F402",    # import shadowed by loop variable
    "F841",    # local variable assigned but never used — common in test scaffolding
    "B004",    # assert-raises-tuple
    "B007",    # loop control variable not used
    "B008",    # function call in default argument — used in FastAPI Depends()
    "B017",    # assertRaises(Exception) — broad-exception test idiom
    "B904",    # raise without from inside except — often intentional
    "B905",    # zip without explicit strict
    # ── Comprehensions / refactoring ───────────────────────────────────────────
    "C408",    # unnecessary dict/list/tuple calls — stylistic preference
    "C416",    # unnecessary list comprehension
    # ── Naming conventions ─────────────────────────────────────────────────────
    "N806",    # non-lowercase variable in function — used for class-like locals
    "N814",    # camelcase imported as constant
    # ── pyupgrade — deferred refactors ────────────────────────────────────────
    "UP042",   # replace-str-enum — deferred; verify no isinstance(x, str) callers first
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107", "S108", "S112", "ANN", "N"]
"infra/db/versions/**" = ["N999"]  # Alembic migration naming is auto-generated

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=html:htmlcov --cov-config=pyproject.toml -v"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/migrations/*",
    ".venv/*",
]

[tool.coverage.report]
fail_under = 60
